# CrazyPainter

./: .gitignore  CMakeLists.txt  Circle.cpp  CircleInterpolation.hpp  ColorGenerator.cpp  ColorGenerator.hpp  Crazy Painter.cbp  Crazy Painter.depend  Crazy Painter.layout  CrazyPainter.cpp  CrazyPainter.hpp  FadeShader - Working Kopie.frag  HermiteInterpolation.cpp  HermiteInterpolation.hpp  InterpolationMode.hpp  JitterMode.hpp  README.md  Random.cpp  Random.hpp  RoundendedLine.cpp  RoundendedLine.h  RoundendedLine.hpp  SmoothstepInterpolation.cpp  SmoothstepInterpolation.hpp  SubtractivBlendModeTest.cpp  TODO.txt  Utilities.h  Utilities.hpp  getMaximumSizeBugFix.cpp  helpers.cmake  main - Working Kopie.cpp  main.cpp
Crazy Painter/: FadeShader.frag
data/: FadeShader.frag
src/: CircleInterpolation.cpp  ColorGenerator.hpp  CrazyPainter.cpp  CrazyPainter.hpp  DeflectInterpolation.cpp  DeflectInterpolation.hpp  HermiteInterpolation.cpp  HermiteInterpolation.hpp  InterpolationMode.hpp  JitterMode.cpp  PathResolver.cpp  PathResolver.hpp  Random.cpp  Random.hpp  RoundendedLine.cpp  RoundendedLine.hpp  SpiralInterpolation.cpp  SpiralInterpolation.hpp  StarInterpolation.cpp  StarInterpolation.hpp  Utilities.hpp  main.cpp
src/osx/: PathResolver.mm
